Added change log code to all files. Updated metadata.

--- a/source-code/py-notebook/EPBC-conservation.ipynb
+++ b/source-code/py-notebook/EPBC-conservation.ipynb
@@ -77,13 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
+    "import sys\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
     "import list_functions as lf\n",
-    "#projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
-    "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "\n",
     "sourceDataDir = projectDir + \"source-data/EPBCA/\"\n",
     "processedDataDir = projectDir + \"current-lists/conservation-lists/\"\n",
     "\n",
@@ -131,7 +135,7 @@
     "import ssl\n",
     "\n",
     "with urllib.request.urlopen(listURL,context=ssl.create_default_context(cafile=certifi.where())) as url:\n",
-    " data = pd.read_csv(url)\n",
+    "data = pd.read_csv(url)\n",
     "data.to_csv(sourceDataDir + filename,encoding=\"UTF-8\",index=False)"
    ],
    "metadata": {
