--- a/source-code/py-notebook/NSW-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NSW-conservation-sensitive.ipynb
@@ -44,14 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import urllib.request, json\n",
-    "import list_functions as lf\n",
+    "import os\n",
+    "import sys\n",
     "\n",
-    "projectdir = \"/Users/oco115/PycharmProjects/auth-lists-updates/NSW-2022-10/\"\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n",
     "with urllib.request.urlopen(\"https://data.bionet.nsw.gov.au/biosvcapp/odata/SpeciesNames\") as url:\n",
     "    data = json.loads(url.read().decode())\n"
@@ -179,7 +196,7 @@
    "outputs": [],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "conservation.to_csv(projectdir + \"current-lists/conservation-lists/NSW-conservation-2022-10.csv\",encoding=\"UTF-8\",index=False)\n",
+    "conservation.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservation-2022-10.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
@@ -367,7 +384,7 @@
    "outputs": [],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "sensitive.to_csv(projectdir + \"current-lists/sensitive-lists/NSW-sensitive-2022-10.csv\",encoding=\"UTF-8\",index=False)\n",
+    "sensitive.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-2022-10.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
