--- a/source-code/py-notebook/QLD-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/QLD-conservation-sensitive.ipynb
@@ -79,8 +79,14 @@
     "import urllib.request, json\n",
     "import certifi\n",
     "import ssl\n",
+    "import os\n",
+    "import sys\n",
     "\n",
-    "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
+    "\n",
     "sourceDataDir = projectDir + \"source-data/QLD/\"\n",
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "\n",
