--- a/source-code/py-notebook/SA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/SA-conservation-sensitive.ipynb
@@ -34,13 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "#import essential libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import list_functions as lf"
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
+    "print(\"ok\")"
    ],
    "metadata": {
     "collapsed": false,
