--- a/source-code/py-notebook/WA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/WA-conservation-sensitive.ipynb
@@ -57,7 +57,7 @@
     "processedDataDir = projectDir + \"current-lists/\"\n",
     "\n",
     "faunafilename = sourceDataDir + \"Threatened and Priority Fauna List 7 October2022.csv\"\n",
-    "florafilename = sourceDataDir + \"Threatened and Priority Flora List 6 October2022.csv\""
+    "florafilename = sourceDataDir + \"Threatened and Priority Flora List 6 October2022.csv\"\n"
    ],
    "metadata": {
     "collapsed": false,
