--- a/source-code/py-notebook/inaturalist-statuses/inat-change-log.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/inat-change-log.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -9192,7 +9195,7 @@
     "    split_list.append([c, d])\n",
     "\n",
     "df = pd.DataFrame(split_list, columns=['c', 'd'])\n",
-    "df\n",
+    "# df\n",
     "#df[d].drop_duplicates()"
    ],
    "metadata": {
@@ -9374,7 +9377,10 @@
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
