--- a/source-code/py-notebook/inaturalist-statuses/qld.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/qld.ipynb
@@ -40,7 +40,10 @@
     "# iNaturalist statuses"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -733,7 +736,10 @@
     "### Statuses with no matching taxon in iNaturalist"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -829,7 +835,10 @@
     "Candidates for investigation and removal."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -889,7 +898,10 @@
     "# Stats"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
