Updates for checking current data loads - current

--- a/source-code/py-notebook/NT-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NT-conservation-sensitive.ipynb
@@ -57,6 +57,7 @@
     "import os\n",
     "import sys\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "sourceDir = \"source-data/NT\"\"\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\""
    ],
@@ -84,7 +85,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "data = pd.read_excel(\"/Users/cha801/Documents/UpdateLists/Excels/northernTerritoryConservationStatusList-Plants.xlsx\")"
+    "data = pd.read_excel(sourcedir + \"northernTerritoryConservationStatusList-Plants.xlsx\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -372,7 +373,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(\"/northernTerritoryConservationStatusList-Animals.csv\")"
+    "data1 = pd.read_csv(sourcedir + \"/northernTerritoryConservationStatusList-Animals.csv\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -717,7 +718,7 @@
    "source": [
     "\n",
     "# Feb 2023 update\n",
-    "# So there is only one change required for that ALA list - Candalides geminus has been REMOVED for the NT list."
+    "### So there is only one change required for that ALA list - Candalides geminus has been REMOVED for the NT list."
    ],
    "metadata": {
     "collapsed": false,
