Updated all notebooks with change log code. Source data for SA updated

--- a/source-code/py-notebook/EPBC-conservation.ipynb
+++ b/source-code/py-notebook/EPBC-conservation.ipynb
@@ -472,18 +472,15 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype =\"C\"\n",
     "# conservation\n",
     "filename = \"NT-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr656\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr656\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
    ],
    "metadata": {
@@ -549,20 +546,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "       status                            name              scientificName_x  \\\n82      added    Acanthiza pusilla archibaldi  Acanthiza pusilla archibaldi   \n82    removed  Acanthiza pusilla magnirostris                           NaN   \n139     added          Androcalva perkinsiana        Androcalva perkinsiana   \n142   removed      Angianthus phyllocalymmeus                           NaN   \n149   removed                   Anstisia alba                           NaN   \n...       ...                             ...                           ...   \n1895  removed           Vincetoxicum forsteri                           NaN   \n1896  removed           Vincetoxicum rupicola                           NaN   \n1897  removed           Vincetoxicum woollsii                           NaN   \n1923  removed                  Zanda baudinii                           NaN   \n1924  removed               Zanda latirostris                           NaN   \n\n                     commonName_x  \n82    King Island Brown Thornbill  \n82                            NaN  \n139                          None  \n142                           NaN  \n149                           NaN  \n...                           ...  \n1895                          NaN  \n1896                          NaN  \n1897                          NaN  \n1923                          NaN  \n1924                          NaN  \n\n[71 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>status</th>\n      <th>name</th>\n      <th>scientificName_x</th>\n      <th>commonName_x</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>82</th>\n      <td>added</td>\n      <td>Acanthiza pusilla archibaldi</td>\n      <td>Acanthiza pusilla archibaldi</td>\n      <td>King Island Brown Thornbill</td>\n    </tr>\n    <tr>\n      <th>82</th>\n      <td>removed</td>\n      <td>Acanthiza pusilla magnirostris</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>139</th>\n      <td>added</td>\n      <td>Androcalva perkinsiana</td>\n      <td>Androcalva perkinsiana</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>142</th>\n      <td>removed</td>\n      <td>Angianthus phyllocalymmeus</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>149</th>\n      <td>removed</td>\n      <td>Anstisia alba</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1895</th>\n      <td>removed</td>\n      <td>Vincetoxicum forsteri</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1896</th>\n      <td>removed</td>\n      <td>Vincetoxicum rupicola</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1897</th>\n      <td>removed</td>\n      <td>Vincetoxicum woollsii</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1923</th>\n      <td>removed</td>\n      <td>Zanda baudinii</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1924</th>\n      <td>removed</td>\n      <td>Zanda latirostris</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>71 rows × 4 columns</p>\n</div>"
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# changelist[['status','name','scientificName_x','commonName_x']].sort_values('name')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading historical list')"
    ],
    "metadata": {
     "collapsed": false,
