--- a/source-code/py-notebook/NSW-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NSW-conservation-sensitive.ipynb
@@ -434,18 +434,14 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype=\"C\"\n",
     "# conservation\n",
     "filename = \"NSW-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr650\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr650\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
    ],
    "metadata": {
@@ -456,10 +452,27 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production list to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading historical list')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -489,18 +502,15 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype = \"S\"\n",
     "# conservation\n",
     "filename = \"NSW-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr487\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18457\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
    ],
    "metadata": {
@@ -511,10 +521,27 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical List directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading historical list')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
