--- a/source-code/py-notebook/NT-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NT-conservation-sensitive.ipynb
@@ -660,7 +660,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "result.to_csv('/northernTerritoryConservationStatusList.csv',index = False,encoding='utf-8-sig')"
+    "result.to_csv('/northernTerritoryConservationStatusList.csv',  encoding=\"UTF-8-sig\",index = False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -767,7 +767,7 @@
    "source": [
     "#Write to CSV\n",
     "# conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",index=False)\n",
-    "sensitiveList.to_csv(projectDir + sdataDir + \"NT-sensitive.csv\",index=False)\n",
+    "sensitiveList.to_csv(projectDir + sdataDir + \"NT-sensitive.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print('Finished processing')\n"
    ],
    "metadata": {
@@ -817,18 +817,15 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype = \"C\"\n",
     "# conservation\n",
     "filename = \"NT-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr651\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr651\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
    ],
    "metadata": {
@@ -839,16 +836,43 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading historical list')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Sensitive List - Download old and new and compare\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
@@ -861,19 +885,44 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype =\"S\"\n",
     "# conservation\n",
     "filename = \"NT-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr492\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18690\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "changelist"
+    "print('Finished downloading historical list')"
    ],
    "metadata": {
     "collapsed": false,
