--- a/source-code/py-notebook/TAS-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/TAS-conservation-sensitive.ipynb
@@ -414,19 +414,45 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype = \"C\"\n",
     "# conservation\n",
     "filename = \"TAS-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr654\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr654\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "changelist"
+    "print('Finished downloading historical list')"
    ],
    "metadata": {
     "collapsed": false,
@@ -457,19 +483,45 @@
     "\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "\n",
+    "ltype = \"S\"\n",
     "# conservation\n",
     "filename = \"TAS-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr491\" + \"?max=10000&includeKVP=true\"\n",
     "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr2627\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "changelist"
+    "print('Finished downloading historical list')"
    ],
    "metadata": {
     "collapsed": false,
