--- a/source-code/py-notebook/WA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/WA-conservation-sensitive.ipynb
@@ -586,26 +586,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "skipping # comment this line to do a list check between test and production and save the changelog\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
-    "# conservation\n",
+    "# Conservation\n",
+    "ltype = \"C\"\n",
     "filename = \"WA-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr2201\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr2201\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "print(\"conservation changelist done\")\n",
-    "\n",
+    "print(\"conservation changelist done\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Download Production lists to Historical Lists directory"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "print('Finished downloading historical list')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sensitive\n",
     "filename = \"WA-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr467\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18406\" + \"?max=10000&includeKVP=true\"\n",
@@ -622,26 +657,24 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "skipping # comment this line to save the prod list to the historical directory\n"
-     ]
-    }
+   "cell_type": "markdown",
+   "source": [
+    "### Download production lists to Historical lists directory"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "%%script echo skipping # comment this line to save the prod list to the historical directory\n",
     "\n",
-    "filename = \"WA-conservation.csv\"\n",
-    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr2201\" + \"?max=10000&includeKVP=true\"\n",
-    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "filename = \"WA-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr467\" + \"?max=10000&includeKVP=true\"\n",
     "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
