Updated all notebooks with change log code.

--- a/source-code/py-notebook/NT-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NT-conservation-sensitive.ipynb
@@ -670,14 +670,18 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "## Download and update Sensitive list"
+    "## Download and update Sensitive list\n",
+    "###Feb 2023 update\n",
+    "### So there is only one change required for that ALA list - Candalides geminus has been REMOVED for the NT list."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
@@ -710,20 +714,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "# Feb 2023 update\n",
-    "### So there is only one change required for that ALA list - Candalides geminus has been REMOVED for the NT list."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   },
@@ -852,6 +842,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to download the files and save locally\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
@@ -919,6 +910,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to download the files and save locally\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
