--- a/source-code/py-notebook/QLD-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/QLD-conservation-sensitive.ipynb
@@ -435,6 +435,7 @@
     "# rename fields\n",
     "confidentiallist = confidentiallist.rename(columns=\n",
     "{\n",
+    "    'status':'category',\n",
     "    'Taxon Id':'taxonID',\n",
     "    'Kingdom':'kingdom',\n",
     "    'Class':'class',\n",
@@ -580,6 +581,18 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### Define functions"
@@ -593,48 +606,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't find program: 'echo'\n"
+     ]
+    }
+   ],
    "source": [
-    "def download_ala_list(url: str):\n",
-    "    with urllib.request.urlopen(url, context=ssl.create_default_context(cafile=certifi.where())) as url:\n",
-    "        data = json.loads(url.read().decode())\n",
-    "        data = pd.json_normalize(data)\n",
-    "        return data\n",
-    "\n",
-    "def kvp_to_columns(df):\n",
-    "    d0 = pd.DataFrame()\n",
-    "    for i in df.index:\n",
-    "        kvpdf = pd.json_normalize(df.kvpValues[i])\n",
-    "        kvpdf = kvpdf.transpose()\n",
-    "        kvpdf.columns = kvpdf.loc['key'] #rename columns to the keys\n",
-    "        kvpdf.drop(['key'], inplace=True) #drop the keys row\n",
-    "        kvpdf['id'] = df.id[i]\n",
-    "        kvpdf = pd.merge(df,kvpdf,\"inner\",on=\"id\")\n",
-    "        d0 = pd.concat([d0,kvpdf])\n",
-    "    return d0\n",
-    "\n",
-    "def get_changelist(newListUrl: str, oldListUrl: str):\n",
-    "    oldList = download_ala_list(oldListUrl)\n",
-    "    oldList = kvp_to_columns(oldList)\n",
-    "    newList = download_ala_list(newListUrl)\n",
-    "    newList = kvp_to_columns(newList)\n",
-    "    # new names\n",
-    "    newVsOld = pd.merge(newList, oldList, how='left', on='name', suffixes=('_new','_old'))\n",
-    "    newVsOld = newVsOld[newVsOld['scientificName_old'].isna()][['name', 'commonName_new', 'scientificName_new','status_new']]\n",
-    "    newVsOld['listUpdate'] = 'added'\n",
-    "    # removed names\n",
-    "    oldVsNew = pd.merge(oldList, newList, how='left', on='name', suffixes=('_old','_new'))\n",
-    "    oldVsNew = oldVsNew[oldVsNew['scientificName_new'].isna()][['name', 'commonName_old', 'scientificName_old','status_old']]\n",
-    "    oldVsNew['listUpdate'] = 'removed'\n",
-    "    # status changes\n",
-    "    statusChanges = pd.merge(newList, oldList, how='left', on='name', suffixes=('_new','_old'))\n",
-    "    statusChanges = statusChanges[statusChanges['status_new'] != statusChanges['status_old']][['name','commonName_new','scientificName_new','status_new','status_old']]\n",
-    "    statusChanges['listUpdate'] = 'status change'\n",
-    "    # union and display in alphabetical order and save locally\n",
-    "    changeList = pd.concat([newVsOld, oldVsNew])\n",
-    "    #changeList = changeList[['listUpdate','name','scientificName_x','commonName_x','status_x','status_y']].sort_values('name')\n",
-    "    return changeList"
+    "%%script echo skipping # comment this line to run this code\n",
+    "# prep\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -644,32 +634,17 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "### Conservation List - Download old and new and compare"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
     "%%script echo skipping # comment this line to run this code\n",
-    "\n",
-    "import datetime\n",
-    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "ltype = \"C\"\n",
     "# conservation\n",
     "filename = \"QLD-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr652\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr652\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = get_changelist(testListUrl, prodListUrl, ltype)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
@@ -698,6 +673,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to run this code\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
@@ -761,6 +737,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to run this code\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
