--- a/source-code/py-notebook/SA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/SA-conservation-sensitive.ipynb
@@ -64,6 +64,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "## Conservation list\n",
     "# Download the Excel files first. Data is in multiple sheets and has to have first few rows removed also.\n",
     "# Read Excel files into dataframes from these sources:\n",
@@ -718,7 +720,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# %%script echo skipping # comment this line to run this code\n",
+    "%%script echo skipping # comment this line to run this code\n",
     "import datetime\n",
     "monthStr = datetime.datetime.now().strftime('%Y%m')"
    ],
@@ -734,6 +736,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "ltype = \"C\"\n",
     "# conservation\n",
     "filename = \"SA-conservation.csv\"\n",
@@ -769,6 +773,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
@@ -842,6 +848,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
