--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
@@ -311,6 +311,8 @@
     }
    ],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
@@ -393,6 +395,8 @@
     }
    ],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
