--- a/source-code/py-notebook/TAS-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/TAS-conservation-sensitive.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -96,44 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading TAS Conservation List\n",
-      "Finished downloading\n"
+      "Couldn't find program: 'echo'\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "    Origin                         Species            Authority  \\\n0      end                Acacia axillaris               Benth.   \n1      end               Acacia pataczekii           D.I.Morris   \n2      NaN             Acacia siculiformis    A.Cunn. ex Benth.   \n3      NaN               Acacia ulicifolia      (Salisb.) Court   \n4      NaN                Acacia uncifolia  (J.M.Black) O'Leary   \n..     ...                             ...                  ...   \n718    end        Thylacinus cynocephalus                Harris   \n719    end             Thymichthys politus         (Richardson)   \n720    end  Tyto novaehollandiae castanops              (Gould)   \n721    NaN        Vombatus ursinus ursinus                  NaN   \n722    end                Zearaja maugeana      Last & Gledhill   \n\n            Common Name    Family          Group  sch EPBCA Flora/Fauna  \\\n0       midlands wattle  Fabaceae  Dicotyledonae    v    VU       Flora   \n1         wallys wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n2         dagger wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n3        juniper wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n4         coast wirilda  Fabaceae  Dicotyledonae    r   NaN       Flora   \n..                  ...       ...            ...  ...   ...         ...   \n718           Thylacine   Mammals    Vertebrates    x    EX       Fauna   \n719        Red Handfish      Fish    Vertebrates    e    CR       Fauna   \n720          Masked Owl     Birds    Vertebrates    e    VU       Fauna   \n721  Bass Strait Wombat   Mammals    Vertebrates  NaN    VU       Fauna   \n722       Maugean Skate      Fish    Vertebrates    e    EN       Fauna   \n\n    Classification  \n0         vascular  \n1         vascular  \n2         vascular  \n3         vascular  \n4         vascular  \n..             ...  \n718     vertebrate  \n719     vertebrate  \n720     vertebrate  \n721     vertebrate  \n722     vertebrate  \n\n[723 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Origin</th>\n      <th>Species</th>\n      <th>Authority</th>\n      <th>Common Name</th>\n      <th>Family</th>\n      <th>Group</th>\n      <th>sch</th>\n      <th>EPBCA</th>\n      <th>Flora/Fauna</th>\n      <th>Classification</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>end</td>\n      <td>Acacia axillaris</td>\n      <td>Benth.</td>\n      <td>midlands wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>v</td>\n      <td>VU</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>end</td>\n      <td>Acacia pataczekii</td>\n      <td>D.I.Morris</td>\n      <td>wallys wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>Acacia siculiformis</td>\n      <td>A.Cunn. ex Benth.</td>\n      <td>dagger wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>Acacia ulicifolia</td>\n      <td>(Salisb.) Court</td>\n      <td>juniper wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>Acacia uncifolia</td>\n      <td>(J.M.Black) O'Leary</td>\n      <td>coast wirilda</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>718</th>\n      <td>end</td>\n      <td>Thylacinus cynocephalus</td>\n      <td>Harris</td>\n      <td>Thylacine</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>x</td>\n      <td>EX</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>719</th>\n      <td>end</td>\n      <td>Thymichthys politus</td>\n      <td>(Richardson)</td>\n      <td>Red Handfish</td>\n      <td>Fish</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>CR</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>720</th>\n      <td>end</td>\n      <td>Tyto novaehollandiae castanops</td>\n      <td>(Gould)</td>\n      <td>Masked Owl</td>\n      <td>Birds</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>VU</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>721</th>\n      <td>NaN</td>\n      <td>Vombatus ursinus ursinus</td>\n      <td>NaN</td>\n      <td>Bass Strait Wombat</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>722</th>\n      <td>end</td>\n      <td>Zearaja maugeana</td>\n      <td>Last &amp; Gledhill</td>\n      <td>Maugean Skate</td>\n      <td>Fish</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>EN</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n  </tbody>\n</table>\n<p>723 rows × 10 columns</p>\n</div>"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading TAS Conservation List\n",
-      "Finished downloading\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "    Origin                         Species            Authority  \\\n0      end                Acacia axillaris               Benth.   \n1      end               Acacia pataczekii           D.I.Morris   \n2      NaN             Acacia siculiformis    A.Cunn. ex Benth.   \n3      NaN               Acacia ulicifolia      (Salisb.) Court   \n4      NaN                Acacia uncifolia  (J.M.Black) O'Leary   \n..     ...                             ...                  ...   \n718    end        Thylacinus cynocephalus                Harris   \n719    end             Thymichthys politus         (Richardson)   \n720    end  Tyto novaehollandiae castanops              (Gould)   \n721    NaN        Vombatus ursinus ursinus                  NaN   \n722    end                Zearaja maugeana      Last & Gledhill   \n\n            Common Name    Family          Group  sch EPBCA Flora/Fauna  \\\n0       midlands wattle  Fabaceae  Dicotyledonae    v    VU       Flora   \n1         wallys wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n2         dagger wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n3        juniper wattle  Fabaceae  Dicotyledonae    r   NaN       Flora   \n4         coast wirilda  Fabaceae  Dicotyledonae    r   NaN       Flora   \n..                  ...       ...            ...  ...   ...         ...   \n718           Thylacine   Mammals    Vertebrates    x    EX       Fauna   \n719        Red Handfish      Fish    Vertebrates    e    CR       Fauna   \n720          Masked Owl     Birds    Vertebrates    e    VU       Fauna   \n721  Bass Strait Wombat   Mammals    Vertebrates  NaN    VU       Fauna   \n722       Maugean Skate      Fish    Vertebrates    e    EN       Fauna   \n\n    Classification  \n0         vascular  \n1         vascular  \n2         vascular  \n3         vascular  \n4         vascular  \n..             ...  \n718     vertebrate  \n719     vertebrate  \n720     vertebrate  \n721     vertebrate  \n722     vertebrate  \n\n[723 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Origin</th>\n      <th>Species</th>\n      <th>Authority</th>\n      <th>Common Name</th>\n      <th>Family</th>\n      <th>Group</th>\n      <th>sch</th>\n      <th>EPBCA</th>\n      <th>Flora/Fauna</th>\n      <th>Classification</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>end</td>\n      <td>Acacia axillaris</td>\n      <td>Benth.</td>\n      <td>midlands wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>v</td>\n      <td>VU</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>end</td>\n      <td>Acacia pataczekii</td>\n      <td>D.I.Morris</td>\n      <td>wallys wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>Acacia siculiformis</td>\n      <td>A.Cunn. ex Benth.</td>\n      <td>dagger wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>Acacia ulicifolia</td>\n      <td>(Salisb.) Court</td>\n      <td>juniper wattle</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>Acacia uncifolia</td>\n      <td>(J.M.Black) O'Leary</td>\n      <td>coast wirilda</td>\n      <td>Fabaceae</td>\n      <td>Dicotyledonae</td>\n      <td>r</td>\n      <td>NaN</td>\n      <td>Flora</td>\n      <td>vascular</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>718</th>\n      <td>end</td>\n      <td>Thylacinus cynocephalus</td>\n      <td>Harris</td>\n      <td>Thylacine</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>x</td>\n      <td>EX</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>719</th>\n      <td>end</td>\n      <td>Thymichthys politus</td>\n      <td>(Richardson)</td>\n      <td>Red Handfish</td>\n      <td>Fish</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>CR</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>720</th>\n      <td>end</td>\n      <td>Tyto novaehollandiae castanops</td>\n      <td>(Gould)</td>\n      <td>Masked Owl</td>\n      <td>Birds</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>VU</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>721</th>\n      <td>NaN</td>\n      <td>Vombatus ursinus ursinus</td>\n      <td>NaN</td>\n      <td>Bass Strait Wombat</td>\n      <td>Mammals</td>\n      <td>Vertebrates</td>\n      <td>NaN</td>\n      <td>VU</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n    <tr>\n      <th>722</th>\n      <td>end</td>\n      <td>Zearaja maugeana</td>\n      <td>Last &amp; Gledhill</td>\n      <td>Maugean Skate</td>\n      <td>Fish</td>\n      <td>Vertebrates</td>\n      <td>e</td>\n      <td>EN</td>\n      <td>Fauna</td>\n      <td>vertebrate</td>\n    </tr>\n  </tbody>\n</table>\n<p>723 rows × 10 columns</p>\n</div>"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "print('Downloading TAS Conservation List')\n",
     "taslisturl = \"https://nre.tas.gov.au/Documents/TasThreatenedSpecies.XLS\"\n",
     "tasconservation = pd.read_excel(taslisturl)\n",
@@ -449,6 +424,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
@@ -518,6 +495,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
+    "\n",
     "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
     "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
