Fixed typos and changed cells to markdown

--- a/source-code/py-notebook/NT-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NT-conservation-sensitive.ipynb
@@ -57,7 +57,7 @@
     "import os\n",
     "import sys\n",
     "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
-    "sourceDir = \"source-data/NT\"\"\n",
+    "sourcedir = \"source-data/NT\"\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\""
    ],
