--- a/source-code/py-notebook/QLD-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/QLD-conservation-sensitive.ipynb
@@ -708,7 +708,7 @@
     "filename = \"QLD-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr493\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18404\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = get_changelist(testListUrl, prodListUrl, ltype )\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype )\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
